--- a/Deckel-Shop/Views/Home/Careers.cshtml
+++ b/Deckel-Shop/Views/Home/Careers.cshtml
@@ -3,9 +3,11 @@
 *@
 <style>
 
-    .row{
+    .row {
         margin-top: 100px;
+        flex-wrap: nowrap;
     }
+
 
 </style>
 
@@ -19,29 +21,81 @@
             <div class="row">
                 <div class="col-md-12">
                     <h3>
-                        Plumber (temp text)
+                        Junior Designer Wanted!
                     </h3>
                     <p>
-                        Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
+                        Are you a designer? <strong>Is your passion to bring the next generation of propeler caps to the market?</strong>. We are activly searching for tomorrows bright minds to help us bring our company to new heights.
+                        As we aim to create the most rare and delicate propeler caps in the world. Your task will include assisting the senior designer in creating products of our customers every need, be an assistant to the senior designer and protecting the valuable
+                        blueprints from foreign spies. Work will start immediatly if the application goes through.
+
                     </p>
+                    <p><strong>Desired qualifications</strong></p>
+                    <ul>
+                        <li>Two years working in textile related work</li>
+                        <li>Great understanding of Photoshop</li>
+                        <li>Studied in textile university</li>
+                        <li>Have your own textile working kit</li>
+                        <li>Trained in any sort of self defense</li>
+                    </ul>
                     <button type="button" class="btn btn-primary">
-                        Apply for a job
+                        Apply for the job
                     </button>
                 </div>
             </div>
         </div>
     </div>
-   
+
     <div class="row">
         <div class="col-md-12">
             <h3>
-                h3. Lorem ipsum dolor sit amet.
+                Back-End Technical assistant
             </h3>
             <p>
-                Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
+                Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. 
+                Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. 
+                Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. 
+                <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> 
+                Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. 
+                <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
+
             </p>
+            <p><strong>Desired qualifications</strong></p>
+            <ul>
+                <li>Knowledge in c#, Html, Css ,Javascript</li>
+                <li>Worked with atleast three webprojects</li>
+                <li>Profficient in using tools such as Github, Zenhub, Visual Studio, Visual Studio Code and SQL</li>
+                <li>Worked within the back-end industry for a minimum of 2 years</li>
+            </ul>
             <button type="button" class="btn btn-primary">
-                Apply for a job
+                Apply for the job
+            </button>
+        </div>
+    </div>
+</div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <h3>
+                Demon Tamer Desired!
+            </h3>
+            <p>
+                As an extremly succesful company you might wonder <strong>How did they get so succesful?</strong> and you guessed right, <strong>Demonic magic!</strong> for us to continue our work in selling the most exquisite
+                of products. We will require your aid in summoning demons to control the market! In the roll of a Demon tamer it will be up to you to ensure the safety of our employees <small>(from our summoned demons)</small>, make use the demons of which we use to controll our adveseries
+                but the most important task that will be given to you is to ensure total domination of your craft. The position will be well payed and the applicant will gain multiple benefits befiting of the job.
+
+                Applicant will start working during the tenth month of the year on the 31 day, the contract will be binding for a minimum of twelve years. 
+            </p>
+            <p><strong>Desired qualifications</strong></p>
+            <ul>
+                <li>Atleast five years of Demon hunting/taming</li>
+                <li>Master qualification in Demonology</li>
+                <li>Able to work by yourself </li>
+                <li>Be proficient in demon speech</li>
+                <li>Have a trainee that can take over your work if the worst case scenario happens</li>
+            </ul>
+            <p><small>By accepting this vacancy we are not liable to any missing limbs, loss of life or possible diseases you may encounter</small></p>
+            <button type="button" class="btn btn-primary">
+                Apply for the job
             </button>
         </div>
     </div>
