--- a/Deckel-Shop/Views/Home/Index.cshtml
+++ b/Deckel-Shop/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
     <style>
 
-        .headline-3{
+        .headline-3 {
             margin-top: 100px
         }
 
@@ -63,12 +63,10 @@
                 <div class="container-p">
                     <h1>True pleasure</h1>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        Labore voluptate doloribus perspiciatis vel esse! Itaque, esse labore officia nam neque ab!
-                        In voluptate laborum quas quos explicabo laudantium esse architecto!
+                        The joy of the propeler cap, brings smiles upon not only yourself. But those around you
                     </p>
                     <a href="#" class="btn btn-lg btn-primary">
-                        sign up today
+                        Shop
                     </a>
                 </div>
             </div>
@@ -77,12 +75,10 @@
                 <div class="container-p">
                     <h1>Happyness neverending</h1>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        Labore voluptate doloribus perspiciatis vel esse! Itaque, esse labore officia nam neque ab!
-                        In voluptate laborum quas quos explicabo laudantium esse architecto!
+                        Look at our happy customers, they have felt never ending joy since buying the products from our store!
                     </p>
                     <a href="#" class="btn btn-lg btn-primary">
-                        sign up today
+                        Shop
                     </a>
                 </div>
             </div>
@@ -91,12 +87,10 @@
                 <div class="container-p">
                     <h1>Dont be out be in!</h1>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        Labore voluptate doloribus perspiciatis vel esse! Itaque, esse labore officia nam neque ab!
-                        In voluptate laborum quas quos explicabo laudantium esse architecto!
+                        Famous celebreties around the world enjoys our products, why not join the propeler club? You will not regret it!
                     </p>
                     <a href="#" class="btn btn-lg btn-primary">
-                        sign up today
+                        Shop
                     </a>
                 </div>
             </div>
@@ -111,7 +105,7 @@
         </a>
     </div>
 
-    <h2 class="headline-3 text-color-primary-dark">Enjoy our collection</h2>
+    <h2 class="headline-3 text-color-primary-dark">Enjoy our Products</h2>
     <br />
     <div class="container-fluid">
         <div class="row">
@@ -122,6 +116,21 @@
             <div class="col-md-6">
                 <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/Happy propeler Man.png" width="500" height="500" />
                 <button href="#" class="btn btn-lg btn-primary">Just a click away</button>
+            </div>
+        </div>
+    </div>
+
+    <h2 class="headline-3 text-color-primary-dark">Spring collection</h2>
+    <br />
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6">
+                <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/obamahatt.jpg" width="500" height="500" />
+                <button href="#" class="btn btn-lg btn-primary">Mind blowing</button>
+            </div>
+            <div class="col-md-6">
+                <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/Happy propeler Man.png" width="500" height="500" />
+                <button href="#" class="btn btn-lg btn-primary">Im in!</button>
             </div>
         </div>
     </div>
