Made changes to main index + text to careers, Added Pictures to use for products + views

--- a/Deckel-Shop/Views/Home/Index.cshtml
+++ b/Deckel-Shop/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
             margin-top: 100px
         }
 
+
         .col-md-6 .btn {
             position: absolute;
             top: 85%;
@@ -23,6 +24,7 @@
             cursor: pointer;
             border-radius: 5px;
         }
+
 
         .carousel-item {
             height: 32rem;
@@ -110,26 +112,26 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6">
-                <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/Surprised-propeller keps.jpg" width="500" height="500" />
+                <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/obamahatt.jpg" width="500" height="500" />
                 <button href="#" class="btn btn-lg btn-primary">Join the club</button>
             </div>
             <div class="col-md-6">
-                <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/Happy propeler Man.png" width="500" height="500" />
+                <img  id="Test" alt="Bootstrap Image Preview" class="w-100" src="~/Image/Happy propeler Man.png" width="500" height="500" />
                 <button href="#" class="btn btn-lg btn-primary">Just a click away</button>
             </div>
         </div>
     </div>
 
-    <h2 class="headline-3 text-color-primary-dark">Spring collection</h2>
+    <h2 class="headline-3 text-color-primary-dark">Pirate collection</h2>
     <br />
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6">
-                <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/obamahatt.jpg" width="500" height="500" />
-                <button href="#" class="btn btn-lg btn-primary">Mind blowing</button>
+                <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/PirateGirl.jpg" height="670" />
+                <button href="#" class="btn btn-lg btn-primary">Yarr!</button>
             </div>
             <div class="col-md-6">
-                <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/Happy propeler Man.png" width="500" height="500" />
+                <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/PirateGirl2.jpg" height="670"/>
                 <button href="#" class="btn btn-lg btn-primary">Im in!</button>
             </div>
         </div>
