--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -228,7 +228,8 @@
                                 <div class="modal-dialog modal-dialog-centered">
                                     <div class="DeckelModal modal-content">
                                         <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Customer info</h5>                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <h5 class="modal-title" id="exampleModalLabel">Customer info</h5>                                            
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"/>
                                                 <span aria-hidden="true">&times;</span>
                                         </div>
                                         <div class="modal-body">
