Added News page, filled it and linked it

--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -209,7 +209,7 @@
 
                     <ul class="list-unstyled foot-desc">
                         <li class="mb-2">
-                            <a href="#!">News</a>
+                            <a asp-area="" asp-controller="Home" asp-action="News">News</a>
                         </li>
                         <li class="mb-2">
                             <a asp-area="" asp-controller="Home" asp-action="Careers">Careers</a>
