Changed text in Careers

--- a/Deckel-Shop/Views/Home/Careers.cshtml
+++ b/Deckel-Shop/Views/Home/Careers.cshtml
@@ -26,7 +26,7 @@
                     <p>
                         Are you a designer? <strong>Is your passion to bring the next generation of propeler caps to the market?</strong>. We are activly searching for tomorrows bright minds to help us bring our company to new heights.
                         As we aim to create the most rare and delicate propeler caps in the world. Your task will include assisting the senior designer in creating products of our customers every need, be an assistant to the senior designer and protecting the valuable
-                        blueprints from foreign spies. Work will start immediatly if the application goes through.
+                        blueprints from foreign spies. <strong>Work will start immediatly if the application goes through</strong>
 
                     </p>
                     <p><strong>Desired qualifications</strong></p>
@@ -48,16 +48,14 @@
     <div class="row">
         <div class="col-md-12">
             <h3>
-                Back-End Technical assistant
+                Back-End technical assistant
             </h3>
             <p>
-                Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. 
-                Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. 
-                Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. 
-                <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> 
-                Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. 
-                <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
-
+                <strong>Do you have a technical mind?</strong> do you burn for data collection and managing the data required to run our beautiful store? then this is the place for you!
+                Right now we are in the midst of increasing the size of our brand, and we are in need to increase our techical team.
+                In the roll of a back-end tecnical assistant you will be aiding our senior members in ensuring that the data stream between our site and our servers are functional 24/7.
+                You will also be required to aid in cleaning up unessesary code and <small>be a potential sacrifice to our demon overlords.</small>
+                You will be working late hours but will be compensated with great benefits! <strong>Work will start immediatly if the application goes through</strong>
             </p>
             <p><strong>Desired qualifications</strong></p>
             <ul>
