changed the icons in admin index view

--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -49,7 +49,7 @@
             <thead>
                 <tr>
                     <th>
-                        CustomerID
+                        Customer#
                     </th>
                     <th>
                         First Name
