--- a/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
@@ -61,45 +61,45 @@
     @*end of date picker*@
 </div>
 @*-------------------------------------------------------------------------*@
+  
+  @*orders table*@
+
 <div class="row">
+    <div class="col-sm-12">
+        <table class="table table-striped table-bordered dt-responsive display nowrap">
+            <thead>
+                <tr>
+                    <th scope="col">ORDER#</th>
+                    <th scope="col">ORDER DATE</th>
+                    <th scope="col">CUSTOMER NAME</th>
+                    <th scope="col">AMOUNT</th>
+                    <th scope="col">ORDER TOTAL</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
 
+                <tr>
+                    <th scope="row">1</th>
 
-    @*orders table*@
+                    <td>25/03/2021 </td>
+                    <td>alex</td>
+                    <td> 2</td>
+                    <td>129 </td>
+                    <td>
+                        <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModalCenter" style="background-color:transparent">
+                            <i class="fas fa-info-circle"></i>
+                        </button>
+                        <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
+                            <i class="far fa-trash-alt"></i>
+                        </button>
+                    </td>
+                </tr>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <table class="table table-image">
-                    <thead>
-                        <tr>
-                            <th scope="col">Order ID</th>
-                            <th scope="col">Order Date </th>
-                            <th scope="col">Customer Name</th>
-                            <th scope="col">Amount</th>
-                            <th scope="col">Price</th>
-                            <th scope="col">Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-
-                        <tr>
-                            <th scope="row">1</th>
-
-                            <td>25/03/2021 </td>
-                            <td>alex</td>
-                            <td> 2</td>
-                            <td>129 </td>
-                            <td>
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter"><i class="far fa-eye"></i></button>
-                                <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal-deleteOrder"><i class="far fa-trash-alt"></i></button>
-                            </td>
-                        </tr>
-
-                    </tbody>
-                </table>
-            </div>
-        </div>
+            </tbody>
+        </table>
     </div>
+</div>
 
     @*order detail modal *@
     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
