--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
@@ -48,7 +48,7 @@
     </div>
     @*-------------------------------------------------------------------------*@
     <div class="row">
-        <table class="table" id="tblOrderHistory">
+        <table class="table table-striped table-bordered dt-responsive display nowrap" id="tblOrderHistory">
             <thead>
                 <tr>
                     <th>
