--- a/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
@@ -66,16 +66,16 @@
     @*deliverde orders table*@
     <div class="container">
         <div class="row">
-            <div class="col-12">
-                <table class="table table-image">
+            <div class="col-sm-12">
+                <table class="table table-striped table-bordered dt-responsive display nowrap">
                     <thead>
                         <tr>
-                            <th scope="col">Order ID</th>
-                            <th scope="col">Order Date </th>
-                            <th scope="col">Customer Name</th>
-                            <th scope="col">Amount</th>
-                            <th scope="col">Price</th>
-                            <th scope="col">Actions</th>
+                            <th scope="col">ORDER#</th>
+                            <th scope="col">ORDER DATE</th>
+                            <th scope="col">CUSTOMER NAME</th>
+                            <th scope="col">AMOUNT</th>
+                            <th scope="col">ORDER TOTAL</th>
+                            <th scope="col"></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -88,8 +88,12 @@
                             <td> 4</td>
                             <td>239 </td>
                             <td>
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter"><i class="far fa-eye"></i></button>
-                                <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal-deleteOrder"><i class="far fa-trash-alt"></i></button>
+                                <button type="button" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModalCenter" style="background-color:transparent">
+                                    <i class="fas fa-info-circle"></i>
+                                </button>
+                                <button type="button" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
+                                    <i class="far fa-trash-alt"></i>
+                                </button>
                             </td>
                         </tr>
 
