--- a/Deckel-Shop/Views/Stock/Index.cshtml
+++ b/Deckel-Shop/Views/Stock/Index.cshtml
@@ -41,15 +41,15 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <table class="table table-image">
+            <table class="table table-striped table-bordered dt-responsive display nowrap">
                 <thead>
                     <tr>
-                        <th scope="col">ID</th>
-                        <th scope="col">Image </th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Amount</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Actions</th>
+                        <th scope="col">PRODUCT#</th>
+                        <th scope="col">IMAGE</th>
+                        <th scope="col">PRODUCT NAME</th>
+                        <th scope="col">AMOUNT</th>
+                        <th scope="col">PRICE</th>
+                        <th scope="col"></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -65,9 +65,15 @@
                         <td>50 </td>
                         <td>79 </td>
                         <td>
-                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal-details"><i class="far fa-eye"></i></button>
-                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal-customer"><i class="fas fa-edit"></i></button>
-                            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal-delete"><i class="far fa-trash-alt"></i></button>
+                            <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-details" style="background-color:transparent">
+                                <i class="fas fa-info-circle"></i>
+                            </button>
+                            <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-customer" style="background-color:transparent">
+                                <i class="fas fa-edit"></i>
+                            </button>
+                            <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-delete" style="background-color:transparent">
+                                <i class="far fa-trash-alt"></i>
+                            </button>
                         </td>
                     </tr>
 
