--- a/Deckel-Shop/Views/Product/Index.cshtml
+++ b/Deckel-Shop/Views/Product/Index.cshtml
@@ -1,83 +1,197 @@
 ﻿@model IEnumerable<Deckel_Shop.Models.Cap>
 
 
-    <h3 class="h3">Products </h3>
+<div class="container">
+    <h3 class="h3">shopping Demo-4 </h3>
     <div class="row">
         <div class="col-md-3 col-sm-6">
-            <div class="product-grid6">
-                <div class="product-image6">
+            <div class="product-grid4">
+                <div class="product-image4">
                     <a href="#">
-                        <img height="100" width="100" class="pic-1" src="~/image/1.jpg">
+                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-1.jpg">
+                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-2.jpg">
                     </a>
+                    <ul class="social">
+                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                        <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                    </ul>
+                    <span class="product-new-label">New</span>
+                    <span class="product-discount-label">-10%</span>
                 </div>
                 <div class="product-content">
-                    <h3 class="title"><a href="#">Proppelkeps #1</a></h3>
-
+                    <h3 class="title"><a href="#">Women's Black Top</a></h3>
+                    <div class="price">
+                        $14.40
+                    </div>
+                    <a class="add-to-cart" href="">ADD TO CART</a>
                 </div>
-                <ul class="social">
-                    <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a>100:-</li>
-                    <li>+10 i lager</li>
-                    <li><a href="" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
-                    
-                </ul>
-
             </div>
         </div>
         <div class="col-md-3 col-sm-6">
-            <div class="product-grid6">
-                <div class="product-image6">
+            <div class="product-grid4">
+                <div class="product-image4">
                     <a href="#">
-                        <img height="100" width="100" class="pic-1" src="~/image/2.jpg">
+                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-3.jpg">
+                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-4.jpg">
                     </a>
+                    <ul class="social">
+                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                        <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                    </ul>
+                    <span class="product-discount-label">-12%</span>
                 </div>
                 <div class="product-content">
-                    <h3 class="title"><a href="#">Proppelkeps #2</a></h3>
-
+                    <h3 class="title"><a href="#">Men's Blue Shirt</a></h3>
+                    <div class="price">
+                        $17.60
+                    </div>
+                    <a class="add-to-cart" href="">ADD TO CART</a>
                 </div>
-                <ul class="social">
-                    <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a>100:-</li>
-                    <li><a href="" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a>+10 i lager</li>
-                    <li><a href="" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
-                </ul>
             </div>
         </div>
         <div class="col-md-3 col-sm-6">
-            <div class="product-grid6">
-                <div class="product-image6">
+            <div class="product-grid4">
+                <div class="product-image4">
                     <a href="#">
-                        <img height="100" width="100" class="pic-1" src="~/image/2.jpg">
+                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-5.jpg">
+                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-6.jpg">
                     </a>
+                    <ul class="social">
+                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                        <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                    </ul>
+                    <span class="product-new-label">New</span>
+                    <span class="product-discount-label">-10%</span>
                 </div>
                 <div class="product-content">
-                    <h3 class="title"><a href="#">Proppelkeps #3</a></h3>
-
+                    <h3 class="title"><a href="#">Women's Black Top</a></h3>
+                    <div class="price">
+                        $14.40
+                    </div>
+                    <a class="add-to-cart" href="">ADD TO CART</a>
                 </div>
-                <ul class="social">
-                    <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a>100:-</li>
-                    <li><a href="" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a>+10 i lager</li>
-                    <li><a href="" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
-                </ul>
             </div>
         </div>
         <div class="col-md-3 col-sm-6">
-            <div class="product-grid6">
-                <div class="product-image6">
+            <div class="product-grid4">
+                <div class="product-image4">
                     <a href="#">
-                        <img height="100" width="100" class="pic-1" src="~/image/2.jpg">
+                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-7.jpg">
+                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-8.jpg">
                     </a>
+                    <ul class="social">
+                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                        <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                    </ul>
+                    <span class="product-new-label">New</span>
+                    <span class="product-discount-label">-10%</span>
                 </div>
                 <div class="product-content">
-                    <h3 class="title"><a href="#">Proppelkeps #3</a></h3>
-
+                    <h3 class="title"><a href="#">Women's Black Top</a></h3>
+                    <div class="price">
+                        $14.40
+                    </div>
+                    <a class="add-to-cart" href="">ADD TO CART</a>
                 </div>
-                <ul class="social">
-                    <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a>100:-</li>
-                    <li><a href="" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a>+10 i lager</li>
-                    <li><a href="" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
-                </ul>
             </div>
         </div>
-
     </div>
+</div>
 
+<div class="container">
+    <h3 class="h3">shopping Demo-4 </h3>
+    <div class="row">
+        <div class="col-md-3 col-sm-6">
+            <div class="product-grid4">
+                <div class="product-image4">
+                    <a href="#">
+                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-1.jpg">
+                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-2.jpg">
+                    </a>
+                    <ul class="social">
+                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                        <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                    </ul>
+                    <span class="product-new-label">New</span>
+                    <span class="product-discount-label">-10%</span>
+                </div>
+                <div class="product-content">
+                    <h3 class="title"><a href="#">Women's Black Top</a></h3>
+                    <div class="price">
+                        $14.40
+                    </div>
+                    <a class="add-to-cart" href="">ADD TO CART</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="product-grid4">
+                <div class="product-image4">
+                    <a href="#">
+                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-3.jpg">
+                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-4.jpg">
+                    </a>
+                    <ul class="social">
+                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                        <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                    </ul>
+                    <span class="product-discount-label">-12%</span>
+                </div>
+                <div class="product-content">
+                    <h3 class="title"><a href="#">Men's Blue Shirt</a></h3>
+                    <div class="price">
+                        $17.60
+                    </div>
+                    <a class="add-to-cart" href="">ADD TO CART</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="product-grid4">
+                <div class="product-image4">
+                    <a href="#">
+                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-5.jpg">
+                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-6.jpg">
+                    </a>
+                    <ul class="social">
+                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                        <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                    </ul>
+                    <span class="product-new-label">New</span>
+                    <span class="product-discount-label">-10%</span>
+                </div>
+                <div class="product-content">
+                    <h3 class="title"><a href="#">Women's Black Top</a></h3>
+                    <div class="price">
+                        $14.40
+                    </div>
+                    <a class="add-to-cart" href="">ADD TO CART</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="product-grid4">
+                <div class="product-image4">
+                    <a href="#">
+                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-7.jpg">
+                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-8.jpg">
+                    </a>
+                    <ul class="social">
+                        <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
+                        <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                    </ul>
+                    <span class="product-new-label">New</span>
+                    <span class="product-discount-label">-10%</span>
+                </div>
+                <div class="product-content">
+                    <h3 class="title"><a href="#">Women's Black Top</a></h3>
+                    <div class="price">
+                        $14.40
+                    </div>
+                    <a class="add-to-cart" href="">ADD TO CART</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <hr>
