--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm py-3 navbar-dark navbar fixed-top bg-secondary shadow-sm DeckelHeader">
+    <nav class="navbar navbar-expand-sm py-3 navbar-dark navbar fixed-top shadow-sm DeckelHeader">
         <div class="container container-sm DeckelNavBar">
             <a class="navbar-brand " asp-area="" asp-controller="Home" asp-action="index">
                 <!-- Logo Image -->
